# iOS3-VM

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: core-tests.yml  ios-build.yml
app/: Info.plist  iOS3VM.entitlements  project.yml
app/Sources/: AppDelegate.h  AppDelegate.m  EmulatorViewController.h  EmulatorViewController.m  VMEngine.h  VMEngine.m  VMFramebufferView.h  VMFramebufferView.m  VMGuest.c  VMGuest.h  main.m
app/Tests/: test_vmguest.c
core/: CMakeLists.txt
core/include/: a64_emit.h  aes.h  arm.h  devicetree.h  img3.h  jit.h  ksyms.h  loader.h  lzss.h  macho.h  md_bridge.h  md_raw_bridge.h  nand.h  snapshot.h  soc.h  storage.h  vfp.h  vm_block.h  vm_source.h
core/src/: md_bridge.c  md_raw_bridge.c  mmu.c  snapshot.c  vm_block.c  vm_source.c
core/src/arm/: arm_interp.c  vfp.c
core/src/firmware/: aes.c  devicetree.c  img3.c  ksyms.c  loader.c  lzss.c  macho.c
core/src/jit/: a64_emit.c  jit_mem.c  jit_translate.c
core/src/soc/: clcd.c  i2c.c  machine.c  nand.c  nor.c  pcf50635.c  power.c  storage.c  timer.c  tvout.c  uart.c  vic.c
core/tests/: check_bootkernel_external_md.cmake  test_a64_emit.c  test_aes.c  test_arm.c  test_devicetree.c  test_file_block.c  test_guest_patch.c  test_i2c.c  test_img3.c  test_ios3_kernel_patch.c  test_jit.c  test_jit_exec.c  test_jit_mem.c  test_ksyms.c  test_loader.c  test_lzss.c  test_macho.c  test_md_bridge.c  test_md_raw_bridge.c  test_nand.c  test_rootfs_work.c  test_snapshot.c  test_soc.c  test_vfp.c  test_vm_block.c  test_vm_source.c
docs/: ARCHITECTURE.md  BOOTLOG.md  BOOT_CHAIN.md  QUALITY.md  ROADMAP.md  activation.md  debugging.md  dynarec.md  networking.md
tools/: bootkernel.c  file_block.c  file_block.h  guest_patch.c  guest_patch.h  img3dump.c  ios3_kernel_patch.c  ios3_kernel_patch.h  ipsw_explore.py  machoinfo.c  rootfs_work.c  rootfs_work.h  runfw.c  sha256.c  sha256.h  snapboot.c  unlzss.c  whatinsn.py
